RESOLVED FIXED126888
[CSS Background Blending] Various background tiled layers don't blend
https://bugs.webkit.org/show_bug.cgi?id=126888
Summary [CSS Background Blending] Various background tiled layers don't blend
Mihai Tica
Reported 2014-01-13 06:53:36 PST
Applying -webkit-background-blend-mode on a background layer with a tiled gradient doesn't have any effect.
Attachments
Not for review (10.56 KB, patch)
2014-01-21 04:00 PST, Mihai Tica
no flags
Not for review (11.68 KB, patch)
2014-01-21 06:27 PST, Mihai Tica
no flags
Patch V1 (15.83 KB, patch)
2014-01-21 07:43 PST, Mihai Tica
krit: review+
krit: commit-queue-
Patch V2 (16.18 KB, patch)
2014-01-21 08:02 PST, Mihai Tica
no flags
Mihai Tica
Comment 1 2014-01-14 07:18:40 PST
This problem is also valid for gradients and cross-fade images.
Mihai Tica
Comment 2 2014-01-21 04:00:49 PST
Created attachment 221732 [details] Not for review Submitting patch for ews
Mihai Tica
Comment 3 2014-01-21 06:27:43 PST
Created attachment 221738 [details] Not for review Submitting patch for ews
WebKit Commit Bot
Comment 4 2014-01-21 06:30:04 PST
Attachment 221738 [details] did not pass style-queue: ERROR: Source/WebCore/platform/graphics/cairo/ImageBufferCairo.cpp:156: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] Total errors found: 1 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Mihai Tica
Comment 5 2014-01-21 07:43:44 PST
Created attachment 221742 [details] Patch V1 Patch for review
Dirk Schulze
Comment 6 2014-01-21 07:48:29 PST
Comment on attachment 221742 [details] Patch V1 View in context: https://bugs.webkit.org/attachment.cgi?id=221742&action=review Just some snippets on the change log, otherwise great. > Source/WebCore/ChangeLog:8 > + Could you add a brief description here as well please? > Source/WebCore/ChangeLog:12 > + (WebCore::CrossfadeGeneratedImage::drawPattern): add and use blendMode parameter Real sentenced please.
Mihai Tica
Comment 7 2014-01-21 08:02:54 PST
Created attachment 221744 [details] Patch V2 Addressed review comments for the changelogs.
Dirk Schulze
Comment 8 2014-01-21 08:05:51 PST
Comment on attachment 221744 [details] Patch V2 View in context: https://bugs.webkit.org/attachment.cgi?id=221744&action=review > Source/WebCore/ChangeLog:6 > + If you set a tiled cross-faded-image or a tiled gradient as > + a background layer, -webkit-background-blend-mode doesn't work. > + The problem consists in the blendMode parameter not being set > + for these specific drawing paths. Usually this gets after the reviewer.
WebKit Commit Bot
Comment 9 2014-01-21 08:32:28 PST
Comment on attachment 221744 [details] Patch V2 Clearing flags on attachment: 221744 Committed r162442: <http://trac.webkit.org/changeset/162442>
Note You need to log in before you can comment on or make changes to this bug.